--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,4 +1,4 @@
-PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) @OPENMP_FLAG@
+PKG_LIBS = @OPENMP_FLAG@
 PKG_CXXFLAGS=@OPENMP_FLAG@ -I../inst/include/ $(EPI_CONFIG) \
     -Dprintf_epiworld=Rprintf -Depiworld_double=double \
     '-DEPI_CHECK_USER_INTERRUPT(a)=cpp11::check_user_interrupt()'
