Adding plot and print functions for diagrams

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ S3method(get_today_total,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
 S3method(get_transmissions,epiworld_diffnet)
 S3method(get_transmissions,epiworld_model)
+S3method(plot,epiworld_diagram)
 S3method(plot,epiworld_generation_time)
 S3method(plot,epiworld_hist)
 S3method(plot,epiworld_hist_transition)
@@ -47,6 +48,7 @@ S3method(plot_epi,epiworld_model)
 S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
 S3method(print,epiworld_agents_tools)
+S3method(print,epiworld_diagram)
 S3method(print,epiworld_entities)
 S3method(print,epiworld_entity)
 S3method(print,epiworld_globalevent)
