--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -113,8 +113,8 @@ jobs:
       - name: Get epiworldRShiny
         run: |
           # Get the latest version from CRAN
-          apt-get update && apt-get install curl -y --no-install-recommends
-          LATEST_VERSION=$(curl -s https://crandb.r-pkg.org/epiworldRShiny | grep -o '"Version":"[^"]*"' | cut -d'"' -f4)
+          apt-get update && apt-get install curl jq -y --no-install-recommends
+          LATEST_VERSION=$(curl -s https://crandb.r-pkg.org/epiworldRShiny | jq -r '.Version')
           wget \
             https://cran.r-project.org/src/contrib/epiworldRShiny_${LATEST_VERSION}.tar.gz
 
