Adding functions from measles and new distribution functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(ModelSIRMixing)
 export(ModelSIS)
 export(ModelSISD)
 export(ModelSURV)
+export(add_entities_from_dataframe)
 export(add_entity)
 export(add_globalevent)
 export(add_param)
@@ -109,9 +110,11 @@ export(clone_model)
 export(distribute_entity_randomly)
 export(distribute_entity_to_set)
 export(distribute_tool_randomly)
+export(distribute_tool_to_entities)
 export(distribute_tool_to_set)
 export(distribute_virus_randomly)
 export(distribute_virus_set)
+export(distribute_virus_to_entities)
 export(distribute_virus_to_set)
 export(draw_mermaid)
 export(draw_mermaid_from_data)
