--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ export(draw_mermaid_from_matrix)
 export(entity)
 export(entity_add_agent)
 export(entity_get_agents)
+export(get_active_cases)
 export(get_agents)
 export(get_agents_data_ncols)
 export(get_agents_states)
@@ -163,6 +164,7 @@ export(get_name_virus)
 export(get_ndays)
 export(get_network)
 export(get_observed_stats)
+export(get_outbreak_size)
 export(get_param)
 export(get_reproductive_number)
 export(get_state)
