Adding the methods package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -253,6 +253,7 @@ export(virus_set_state)
 importFrom(graphics,boxplot)
 importFrom(graphics,legend)
 importFrom(graphics,plot)
+importFrom(methods,formalArgs)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
