Porting new hosp tracker

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,7 @@ export(get_hist_tool)
 export(get_hist_total)
 export(get_hist_transition_matrix)
 export(get_hist_virus)
+export(get_hospitalizations)
 export(get_initial_params)
 export(get_mean_params)
 export(get_mean_stats)
